--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-.netrwhist
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# dotfile project sensitive config file
+.extra
