--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = git://github.com/winfield/oh-my-zsh.git
+[submodule ".vim/colors/solarized"]
+	path = .vim/colors/solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
