Add tmux pane selection key bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,9 @@ bind-key Escape copy-mode             # enter copy mode (prefix Escape)
 bind-key C-p pasteb                   # paste buffer (prefix p)
 bind-key -t vi-copy v begin-selection # select (v)
 bind-key -t vi-copy y copy-selection  # copy (y)
+
+# select pane
+bind-key k selectp -U # above (prefix k)
+bind-key j selectp -D # below (prefix j)
+bind-key h selectp -L # left  (prefix h)
+bind-key l selectp -R # right (prefix l)
