Let tmux and vim work better together

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,3 +20,6 @@ bind-key k selectp -U # above (prefix k)
 bind-key j selectp -D # below (prefix j)
 bind-key h selectp -L # left  (prefix h)
 bind-key l selectp -R # right (prefix l)
+
+# work with vim
+set-window-option -g utf8 on
