--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,43 @@
-# prefix key (Ctrl + e)
-set-option -g prefix C-e
-unbind-key C-b
-bind-key C-e send-prefix
+unbind r
+bind r source-file ~/.tmux.conf
 
-# split window
+set -g prefix C-e
+set -g mouse on
+set -g status-position top
+set -g default-terminal "tmux-256color"
+
+bind-key k selectp -U
+bind-key j selectp -D
+bind-key h selectp -L
+bind-key l selectp -R
+
 unbind-key '"'
-bind-key - splitw -v # vertical split (prefix -)
+bind-key - splitw -v
 unbind-key %
-bind-key | splitw -h # horizontal split (prefix |)
+bind-key | splitw -h
 
 # copy mode
-bind-key Escape copy-mode             # enter copy mode (prefix Escape)
-bind-key C-p pasteb                   # paste buffer (prefix p)
-bind-key -t vi-copy v begin-selection # select (v)
-bind-key -t vi-copy y copy-selection  # copy (y)
+# bind-key Escape copy-mode             # enter copy mode (prefix Escape)
+# bind-key C-p pasteb                   # paste buffer (prefix p)
+# bind-key -t vi-copy v begin-selection # select (v)
+# bind-key -t vi-copy y copy-selection  # copy (y)
 
-# select pane
-bind-key k selectp -U # above (prefix k)
-bind-key j selectp -D # below (prefix j)
-bind-key h selectp -L # left  (prefix h)
-bind-key l selectp -R # right (prefix l)
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Themes
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_theme storm
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_show_path 1
+
+# set -g @plugin 'catppuccin/tmux'
+# set -g @catppuccin_flavor 'macchiato' # frappe, mocha or latte
+# set -g @catppuccin_window_status_style "slanted"
+# set -g status-right "#{E:@catppuccin_status_directory}"
+# set -agF status-right "#{E:@catppuccin_status_application}"
+# set -agF status-right "#{E:@catppuccin_status_session}"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
