Add tmux menu plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,8 @@ bind-key | splitw -h
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set -g @plugin 'jaclu/tmux-menus'
+
 # Themes
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @tokyo-night-tmux_theme storm
