--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,9 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'jaclu/tmux-menus'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 # Themes
 set -g @plugin "janoamaral/tokyo-night-tmux"
